--- a/litaval/stilar.css
+++ b/litaval/stilar.css
@@ -1,4 +1,4 @@
-body {
+﻿body {
 	margin:0;
 }
 .sumar {
@@ -23,7 +23,11 @@ body {
 	font-size: 5em;
 	color: #eeeeff;
 }
-.vetur {
-	display: none;
+.vetur {	
 	/*Settu eigin stíla hér fyrir vetur litaþema*/
+	background: blue; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(bottom right, red, yellow); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(bottom right, red, yellow); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(bottom right, red, yellow); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to bottom right, red, yellow); /* Standard syntax (must be last) */
 }
